<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lyt_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="Theme Color"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="Small Text"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/View02"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/soft_grey" />

            <LinearLayout
                android:id="@+id/lyt_rate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Rate This App"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:id="@+id/View04"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/soft_grey" />

            <LinearLayout
                android:id="@+id/lyt_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="About"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/developer"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </LinearLayout>
            <View
                android:id="@+id/View05"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/soft_grey" />

            <LinearLayout
                android:id="@+id/lyt_abot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Contact us"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/TextView021"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutAdmob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>
</LinearLayout>